# machine-failures-detection

./: .gitignore  README.md  notes.txt  predict_test.py  predict_test_cloud.py  project's_notebook.ipynb  project_notebook.ipynb  pyproject.toml  streamlit_app.py
.ipynb_checkpoints/: ml_for_predictive_maintenance-checkpoint.ipynb  predict_test-checkpoint.py  predict_test_cloud-checkpoint.py
images/: mlflow.drawio
machine-failures-detection-service/: Dockerfile  pyproject.toml
machine-failures-detection-service/.ipynb_checkpoints/: predict-checkpoint.py
