[project]
name = "machine-failures-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
    "xgboost>=2.1.3",
]
